--- a/demos/jtest.lpi
+++ b/demos/jtest.lpi
@@ -10,7 +10,6 @@
       <MainUnit Value="0"/>
       <ResourceType Value="res"/>
       <UseXPManifest Value="True"/>
-      <Icon Value="0"/>
       <ActiveWindowIndexAtStart Value="0"/>
     </General>
     <i18n>
@@ -25,11 +24,11 @@
         <CompilerOptions>
           <Version Value="11"/>
           <Target>
-            <Filename Value="jtest"/>
+            <Filename Value="bin/$(TargetCPU)-$(TargetOS)/jtest"/>
           </Target>
           <SearchPaths>
             <IncludeFiles Value="../../base;../../base/template;..;$(ProjOutDir)"/>
-            <OtherUnitFiles Value="../../base;..//..base/template;..;../dependencies/opengl;../../base/ACS"/>
+            <OtherUnitFiles Value="../../base;../../base/template;..;../dependencies/opengl;../../base/ACS"/>
             <UnitOutputDirectory Value="bin/$(TargetCPU)-$(TargetOS)"/>
           </SearchPaths>
           <Parsing>
@@ -72,63 +71,55 @@
     <RunParams>
       <local>
         <FormatVersion Value="1"/>
-        <LaunchingApplication Use="True" PathPlusParams="/usr/bin/gnome-terminal -t 'Lazarus Run Output' -e &quot;$(LazarusDir)/tools/runwait.sh $(TargetCmdLine)&quot;"/>
+        <LaunchingApplication Use="True" PathPlusParams="/usr/bin/gnome-terminal -t 'Lazarus Run Output' -e &quot;$(LazarusDir)tools/runwait.sh $(TargetCmdLine)&quot;"/>
       </local>
     </RunParams>
-    <Units Count="21">
+    <Units Count="25">
       <Unit0>
         <Filename Value="jtest.dpr"/>
         <IsPartOfProject Value="True"/>
         <UnitName Value="jtest"/>
         <EditorIndex Value="0"/>
         <WindowIndex Value="0"/>
-        <TopLine Value="19"/>
-        <CursorPos X="34" Y="40"/>
-        <UsageCount Value="135"/>
+        <TopLine Value="1"/>
+        <CursorPos X="11" Y="11"/>
+        <UsageCount Value="156"/>
         <Loaded Value="True"/>
         <DefaultSyntaxHighlighter Value="Delphi"/>
       </Unit0>
       <Unit1>
         <Filename Value="GDefines.inc"/>
-        <EditorIndex Value="10"/>
         <WindowIndex Value="0"/>
         <TopLine Value="1"/>
         <CursorPos X="12" Y="31"/>
-        <UsageCount Value="67"/>
-        <Loaded Value="True"/>
+        <UsageCount Value="65"/>
         <DefaultSyntaxHighlighter Value="Delphi"/>
       </Unit1>
       <Unit2>
         <Filename Value="../base/BaseTypes.pas"/>
         <UnitName Value="BaseTypes"/>
-        <EditorIndex Value="14"/>
         <WindowIndex Value="0"/>
         <TopLine Value="347"/>
         <CursorPos X="1" Y="369"/>
-        <UsageCount Value="67"/>
-        <Loaded Value="True"/>
+        <UsageCount Value="65"/>
         <DefaultSyntaxHighlighter Value="Delphi"/>
       </Unit2>
       <Unit3>
         <Filename Value="../base/Basics.pas"/>
         <UnitName Value="Basics"/>
-        <EditorIndex Value="11"/>
         <WindowIndex Value="0"/>
         <TopLine Value="975"/>
         <CursorPos X="217" Y="990"/>
-        <UsageCount Value="67"/>
-        <Loaded Value="True"/>
+        <UsageCount Value="65"/>
         <DefaultSyntaxHighlighter Value="Delphi"/>
       </Unit3>
       <Unit4>
         <Filename Value="../base/OSUtils.pas"/>
         <UnitName Value="OSUtils"/>
-        <EditorIndex Value="13"/>
         <WindowIndex Value="0"/>
         <TopLine Value="715"/>
         <CursorPos X="18" Y="715"/>
-        <UsageCount Value="67"/>
-        <Loaded Value="True"/>
+        <UsageCount Value="65"/>
         <DefaultSyntaxHighlighter Value="Delphi"/>
       </Unit4>
       <Unit5>
@@ -137,7 +128,8 @@
         <WindowIndex Value="0"/>
         <TopLine Value="1950"/>
         <CursorPos X="12" Y="1985"/>
-        <UsageCount Value="62"/>
+        <UsageCount Value="60"/>
+        <DefaultSyntaxHighlighter Value="Delphi"/>
       </Unit5>
       <Unit6>
         <Filename Value="/usr/share/fpcsrc/2.4.4/packages/x11/src/x.pp"/>
@@ -145,40 +137,34 @@
         <WindowIndex Value="0"/>
         <TopLine Value="8"/>
         <CursorPos X="16" Y="30"/>
-        <UsageCount Value="3"/>
+        <UsageCount Value="1"/>
+        <DefaultSyntaxHighlighter Value="Delphi"/>
       </Unit6>
       <Unit7>
         <Filename Value="../base/AppsInitGLUT.pas"/>
         <UnitName Value="AppsInitGLUT"/>
-        <IsVisibleTab Value="True"/>
-        <EditorIndex Value="4"/>
         <WindowIndex Value="0"/>
         <TopLine Value="5"/>
         <CursorPos X="85" Y="11"/>
-        <UsageCount Value="66"/>
-        <Loaded Value="True"/>
+        <UsageCount Value="64"/>
         <DefaultSyntaxHighlighter Value="Delphi"/>
       </Unit7>
       <Unit8>
         <Filename Value="../cast2/C2OGLRender.pas"/>
         <UnitName Value="C2OGLRender"/>
-        <EditorIndex Value="6"/>
         <WindowIndex Value="0"/>
         <TopLine Value="61"/>
         <CursorPos X="38" Y="23"/>
-        <UsageCount Value="66"/>
-        <Loaded Value="True"/>
+        <UsageCount Value="64"/>
         <DefaultSyntaxHighlighter Value="Delphi"/>
       </Unit8>
       <Unit9>
         <Filename Value="../cast2/CAST2.pas"/>
         <UnitName Value="CAST2"/>
-        <EditorIndex Value="8"/>
         <WindowIndex Value="0"/>
         <TopLine Value="1"/>
         <CursorPos X="36" Y="16"/>
-        <UsageCount Value="65"/>
-        <Loaded Value="True"/>
+        <UsageCount Value="63"/>
         <DefaultSyntaxHighlighter Value="Delphi"/>
       </Unit9>
       <Unit10>
@@ -187,235 +173,192 @@
         <WindowIndex Value="0"/>
         <TopLine Value="18159"/>
         <CursorPos X="73" Y="18174"/>
-        <UsageCount Value="13"/>
+        <UsageCount Value="11"/>
         <DefaultSyntaxHighlighter Value="Delphi"/>
       </Unit10>
       <Unit11>
         <Filename Value="../base/BaseCont.pas"/>
         <UnitName Value="BaseCont"/>
-        <EditorIndex Value="9"/>
         <WindowIndex Value="0"/>
         <TopLine Value="659"/>
         <CursorPos X="6" Y="670"/>
-        <UsageCount Value="65"/>
-        <Loaded Value="True"/>
+        <UsageCount Value="63"/>
         <DefaultSyntaxHighlighter Value="Delphi"/>
       </Unit11>
       <Unit12>
         <Filename Value="../base/Geometry.pas"/>
         <UnitName Value="Geometry"/>
-        <EditorIndex Value="7"/>
         <WindowIndex Value="0"/>
         <TopLine Value="1"/>
         <CursorPos X="1" Y="1"/>
-        <UsageCount Value="55"/>
-        <Loaded Value="True"/>
+        <UsageCount Value="53"/>
         <DefaultSyntaxHighlighter Value="Delphi"/>
       </Unit12>
       <Unit13>
         <Filename Value="../base/TextFile.pas"/>
         <UnitName Value="TextFile"/>
-        <EditorIndex Value="5"/>
         <WindowIndex Value="0"/>
         <TopLine Value="7"/>
         <CursorPos X="29" Y="33"/>
-        <UsageCount Value="53"/>
-        <Loaded Value="True"/>
+        <UsageCount Value="51"/>
         <DefaultSyntaxHighlighter Value="Delphi"/>
       </Unit13>
       <Unit14>
-        <Filename Value="/usr/share/fpcsrc/2.4.4/rtl/wince/messages.pp"/>
-        <UnitName Value="messages"/>
-        <WindowIndex Value="0"/>
-        <TopLine Value="1"/>
-        <CursorPos X="5" Y="11"/>
-        <UsageCount Value="2"/>
-      </Unit14>
-      <Unit15>
         <Filename Value="/usr/share/fpcsrc/2.4.4/rtl/unix/sysutils.pp"/>
         <UnitName Value="sysutils"/>
         <WindowIndex Value="0"/>
         <TopLine Value="1"/>
         <CursorPos X="1" Y="1"/>
-        <UsageCount Value="3"/>
-      </Unit15>
-      <Unit16>
+        <UsageCount Value="1"/>
+        <DefaultSyntaxHighlighter Value="Delphi"/>
+      </Unit14>
+      <Unit15>
         <Filename Value="JTestMain.pas"/>
         <UnitName Value="JTestMain"/>
-        <EditorIndex Value="1"/>
+        <EditorIndex Value="6"/>
         <WindowIndex Value="0"/>
-        <TopLine Value="196"/>
-        <CursorPos X="46" Y="196"/>
-        <UsageCount Value="43"/>
+        <TopLine Value="286"/>
+        <CursorPos X="10" Y="322"/>
+        <UsageCount Value="53"/>
         <Loaded Value="True"/>
         <DefaultSyntaxHighlighter Value="Delphi"/>
-      </Unit16>
-      <Unit17>
+      </Unit15>
+      <Unit16>
         <Filename Value="../ACS/ACSBase.pas"/>
         <UnitName Value="ACSBase"/>
-        <EditorIndex Value="2"/>
         <WindowIndex Value="0"/>
         <TopLine Value="1"/>
         <CursorPos X="56" Y="15"/>
-        <UsageCount Value="43"/>
-        <Loaded Value="True"/>
+        <UsageCount Value="41"/>
         <DefaultSyntaxHighlighter Value="Delphi"/>
-      </Unit17>
-      <Unit18>
+      </Unit16>
+      <Unit17>
         <Filename Value="../base/Resources.pas"/>
         <UnitName Value="Resources"/>
-        <EditorIndex Value="3"/>
         <WindowIndex Value="0"/>
         <TopLine Value="844"/>
         <CursorPos X="23" Y="844"/>
-        <UsageCount Value="39"/>
+        <UsageCount Value="37"/>
         <Bookmarks Count="1">
           <Item0 X="21" Y="663" ID="1"/>
         </Bookmarks>
-        <Loaded Value="True"/>
         <DefaultSyntaxHighlighter Value="Delphi"/>
-      </Unit18>
-      <Unit19>
+      </Unit17>
+      <Unit18>
         <Filename Value="/usr/share/fpcsrc/2.4.4/packages/opengl/src/freeglut.pp"/>
         <UnitName Value="FreeGlut"/>
         <WindowIndex Value="0"/>
         <TopLine Value="78"/>
         <CursorPos X="25" Y="110"/>
-        <UsageCount Value="8"/>
-      </Unit19>
-      <Unit20>
+        <UsageCount Value="6"/>
+        <DefaultSyntaxHighlighter Value="Delphi"/>
+      </Unit18>
+      <Unit19>
         <Filename Value="../template/template.pas"/>
         <UnitName Value="template"/>
-        <EditorIndex Value="12"/>
         <WindowIndex Value="0"/>
         <TopLine Value="32"/>
         <CursorPos X="66" Y="51"/>
-        <UsageCount Value="11"/>
+        <UsageCount Value="9"/>
+        <DefaultSyntaxHighlighter Value="Delphi"/>
+      </Unit19>
+      <Unit20>
+        <Filename Value="../../base/Logger.pas"/>
+        <UnitName Value="Logger"/>
+        <IsVisibleTab Value="True"/>
+        <EditorIndex Value="1"/>
+        <WindowIndex Value="0"/>
+        <TopLine Value="49"/>
+        <CursorPos X="18" Y="23"/>
+        <UsageCount Value="20"/>
         <Loaded Value="True"/>
         <DefaultSyntaxHighlighter Value="Delphi"/>
       </Unit20>
+      <Unit21>
+        <Filename Value="../../base/Base3D.pas"/>
+        <UnitName Value="Base3D"/>
+        <EditorIndex Value="2"/>
+        <WindowIndex Value="0"/>
+        <TopLine Value="579"/>
+        <CursorPos X="79" Y="600"/>
+        <UsageCount Value="20"/>
+        <Loaded Value="True"/>
+        <DefaultSyntaxHighlighter Value="Delphi"/>
+      </Unit21>
+      <Unit22>
+        <Filename Value="../CAST2.pas"/>
+        <UnitName Value="CAST2"/>
+        <EditorIndex Value="3"/>
+        <WindowIndex Value="0"/>
+        <TopLine Value="752"/>
+        <CursorPos X="111" Y="773"/>
+        <UsageCount Value="20"/>
+        <Loaded Value="True"/>
+        <DefaultSyntaxHighlighter Value="Delphi"/>
+      </Unit22>
+      <Unit23>
+        <Filename Value="../C2DX8Render.pas"/>
+        <UnitName Value="C2DX8Render"/>
+        <EditorIndex Value="4"/>
+        <WindowIndex Value="0"/>
+        <TopLine Value="1"/>
+        <CursorPos X="16" Y="8"/>
+        <UsageCount Value="20"/>
+        <Loaded Value="True"/>
+        <DefaultSyntaxHighlighter Value="Delphi"/>
+      </Unit23>
+      <Unit24>
+        <Filename Value="C2Defines.inc"/>
+        <EditorIndex Value="5"/>
+        <WindowIndex Value="0"/>
+        <TopLine Value="1"/>
+        <CursorPos X="5" Y="19"/>
+        <UsageCount Value="20"/>
+        <Loaded Value="True"/>
+        <DefaultSyntaxHighlighter Value="Delphi"/>
+      </Unit24>
     </Units>
-    <JumpHistory Count="30" HistoryIndex="29">
+    <JumpHistory Count="10" HistoryIndex="9">
       <Position1>
-        <Filename Value="../base/OSUtils.pas"/>
-        <Caret Line="27" Column="8" TopLine="1"/>
-      </Position1>
-      <Position2>
-        <Filename Value="../base/OSUtils.pas"/>
-        <Caret Line="564" Column="19" TopLine="564"/>
-      </Position2>
-      <Position3>
-        <Filename Value="../base/OSUtils.pas"/>
-        <Caret Line="565" Column="8" TopLine="543"/>
-      </Position3>
-      <Position4>
-        <Filename Value="../base/OSUtils.pas"/>
-        <Caret Line="684" Column="12" TopLine="684"/>
-      </Position4>
-      <Position5>
-        <Filename Value="../base/AppsInitGLUT.pas"/>
-        <Caret Line="27" Column="13" TopLine="1"/>
-      </Position5>
-      <Position6>
-        <Filename Value="../base/AppsInitGLUT.pas"/>
-        <Caret Line="63" Column="22" TopLine="63"/>
-      </Position6>
-      <Position7>
-        <Filename Value="../base/AppsInitGLUT.pas"/>
-        <Caret Line="66" Column="16" TopLine="66"/>
-      </Position7>
-      <Position8>
-        <Filename Value="../base/AppsInitGLUT.pas"/>
-        <Caret Line="73" Column="21" TopLine="73"/>
-      </Position8>
-      <Position9>
         <Filename Value="JTestMain.pas"/>
         <Caret Line="101" Column="13" TopLine="101"/>
-      </Position9>
-      <Position10>
-        <Filename Value="../base/OSUtils.pas"/>
-        <Caret Line="782" Column="20" TopLine="763"/>
-      </Position10>
-      <Position11>
-        <Filename Value="../base/OSUtils.pas"/>
-        <Caret Line="711" Column="19" TopLine="711"/>
-      </Position11>
-      <Position12>
-        <Filename Value="../base/OSUtils.pas"/>
-        <Caret Line="712" Column="24" TopLine="712"/>
-      </Position12>
-      <Position13>
-        <Filename Value="../base/OSUtils.pas"/>
-        <Caret Line="710" Column="55" TopLine="674"/>
-      </Position13>
-      <Position14>
+      </Position1>
+      <Position2>
         <Filename Value="JTestMain.pas"/>
         <Caret Line="162" Column="21" TopLine="162"/>
-      </Position14>
-      <Position15>
-        <Filename Value="../base/AppsInitGLUT.pas"/>
-        <Caret Line="135" Column="16" TopLine="133"/>
-      </Position15>
-      <Position16>
-        <Filename Value="../base/AppsInitGLUT.pas"/>
-        <Caret Line="102" Column="32" TopLine="102"/>
-      </Position16>
-      <Position17>
-        <Filename Value="../base/AppsInitGLUT.pas"/>
-        <Caret Line="144" Column="41" TopLine="130"/>
-      </Position17>
-      <Position18>
-        <Filename Value="../base/AppsInitGLUT.pas"/>
-        <Caret Line="136" Column="16" TopLine="136"/>
-      </Position18>
-      <Position19>
-        <Filename Value="../base/AppsInitGLUT.pas"/>
-        <Caret Line="78" Column="46" TopLine="78"/>
-      </Position19>
-      <Position20>
-        <Filename Value="../base/AppsInitGLUT.pas"/>
-        <Caret Line="183" Column="7" TopLine="162"/>
-      </Position20>
-      <Position21>
+      </Position2>
+      <Position3>
         <Filename Value="jtest.dpr"/>
         <Caret Line="37" Column="20" TopLine="17"/>
-      </Position21>
-      <Position22>
-        <Filename Value="../base/Basics.pas"/>
-        <Caret Line="1639" Column="42" TopLine="1598"/>
-      </Position22>
-      <Position23>
-        <Filename Value="../base/Basics.pas"/>
-        <Caret Line="7" Column="14" TopLine="1"/>
-      </Position23>
-      <Position24>
-        <Filename Value="../base/Basics.pas"/>
-        <Caret Line="436" Column="43" TopLine="422"/>
-      </Position24>
-      <Position25>
-        <Filename Value="../base/Basics.pas"/>
-        <Caret Line="446" Column="1" TopLine="423"/>
-      </Position25>
-      <Position26>
-        <Filename Value="../base/Basics.pas"/>
-        <Caret Line="443" Column="46" TopLine="426"/>
-      </Position26>
-      <Position27>
-        <Filename Value="../base/Basics.pas"/>
-        <Caret Line="448" Column="42" TopLine="426"/>
-      </Position27>
-      <Position28>
-        <Filename Value="../base/Basics.pas"/>
-        <Caret Line="451" Column="1" TopLine="429"/>
-      </Position28>
-      <Position29>
-        <Filename Value="../base/Basics.pas"/>
-        <Caret Line="990" Column="47" TopLine="970"/>
-      </Position29>
-      <Position30>
-        <Filename Value="../template/template.pas"/>
+      </Position3>
+      <Position4>
+        <Filename Value="../../base/Logger.pas"/>
         <Caret Line="1" Column="1" TopLine="1"/>
-      </Position30>
+      </Position4>
+      <Position5>
+        <Filename Value="../../base/Base3D.pas"/>
+        <Caret Line="1" Column="1" TopLine="1"/>
+      </Position5>
+      <Position6>
+        <Filename Value="../../base/Base3D.pas"/>
+        <Caret Line="591" Column="86" TopLine="577"/>
+      </Position6>
+      <Position7>
+        <Filename Value="../../base/Base3D.pas"/>
+        <Caret Line="595" Column="33" TopLine="583"/>
+      </Position7>
+      <Position8>
+        <Filename Value="../../base/Base3D.pas"/>
+        <Caret Line="591" Column="77" TopLine="570"/>
+      </Position8>
+      <Position9>
+        <Filename Value="../CAST2.pas"/>
+        <Caret Line="1" Column="1" TopLine="1"/>
+      </Position9>
+      <Position10>
+        <Filename Value="../C2DX8Render.pas"/>
+        <Caret Line="1" Column="1" TopLine="1"/>
+      </Position10>
     </JumpHistory>
   </ProjectOptions>
   <CompilerOptions>
@@ -471,4 +414,5 @@
       </Item3>
     </Exceptions>
   </Debugging>
+  <EditorMacros Count="0"/>
 </CONFIG>
